2002-08-01  Zbigniew Chyla  <cyba@gnome.pl>

	* src/stf.c
	(stf_open_and_read): Use g_try_malloc
	(stf_preparse, stf_read_workbook, stf_read_workbook_auto_csvtab):
	s/free/g_free/

2002-08-01  Jody Goldberg <jody@gnome.org>

	* src/sheet-style.c (sheet_style_foreach) : new.


	* src/mstyle.c (mstyle_equal_XL) : new.

	* src/item-grid.c (item_grid_draw) : partially fix drawing for merged
	  regions that have some cols/rows hidden.  It is impossible to do
	  that from the gnumeric ui, but it can happen with importers, and
	  will potentially happen with filters.

	* src/item-cursor.c (item_cursor_selection_event) : bring up context
	  menus on right button.

2002-07-30  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (random_01): Fix path of random device!

2002-07-30  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (ran_gamma_int): Fix incorrect underflow
	assumptions.

2002-07-28  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/func-buildin.c: Function description clean up.

2002-07-26  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/sheet.h, src/workbook-control-gui-priv.h,
	src/workbook-control-gui.c, src/tools/filter.c: Hide the
	sensitivity of `Show All' if there are no filtered rows.

	* src/workbook-control-gui.c: Added `Filter->Show All'.

2002-07-25  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (dgeom, pgeom): Properly import using
	tools/import-R.

2002-07-22  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/mathfunc.[ch] (dgeom, pgeom): Added.

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/mathfunc.[ch] (random_gaussian_tail): Added.
	
2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/mathfunc.[ch] (random_landau): Added.

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/mathfunc.[ch] (random_rayleigh_tail): Added.

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/mathfunc.[ch] (random_exppow_pdf, random_exppow,